# AI-Learning

./: AI_Learning_API.postman_collection.json  AI_Learning_API.postman_environment.json  README.md  docker-compose.yml
backend/: .gitignore  clear_all_pdfs.py  config.py  context_assembly.py  contextual_chunking.py  create_animal_kingdom_pdf.py  create_example_pdf.py  create_pdf_from_html.py  create_pdf_simple.py  database.py  env.example  example_prompts.json  hybrid_search.py  ingest_pdf.py  main.py  metrics.py  migrate_pdf_documents.py  pdf_processor.py  pyproject.toml  query_expansion.py  rate_limiting.py  redis_cache.py  requirements.txt  reranking.py  setup_database.py  test_quick_wins.py  test_syntax.py  update_env_db.sh
backend/evaluation/: __init__.py  evaluator.py  test_evaluation_suite.py
backend/prompts/: strategies.py  templates.py
backend/utils/: error_handling.py  hallucination_detection.py  logger.py
documents/: README.md  animal_kingdom_chunks.json  example_ai_learning.html  example_ai_learning.txt  example_ai_learning_chunks.json
frontend/: README.md  angular.json  package-lock.json
frontend/src/: styles.css
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/components/upload/: upload.css  upload.html  upload.ts
frontend/src/app/services/: chat.service.ts
