[project]
name = "ai-learning-backend"
version = "0.1.0"
description = "RAG application backend for AI Learning project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-dotenv==1.0.0",
    "openai==1.3.5",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "fastapi-cors==0.0.6",
    "pdfplumber==0.10.3",
    "pymupdf==1.23.8",
    "psycopg2-binary==2.9.9",
    "tiktoken==0.5.2",
    "numpy==1.24.3",
    "reportlab==4.0.7",
    "redis==5.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
